fix: navbar icons were not properly aligned

--- a/src/app/shared/components/icon/icon.component.scss
+++ b/src/app/shared/components/icon/icon.component.scss
@@ -1,1 +1,6 @@
- 
+:host {
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  vertical-align: middle;
+}
